Improve semantic cache layer
